kube/blockscape-client-ss.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockscape-client-${CI_COMMIT_REF_SLUG}
  namespace: blockscape
  labels:
    app: blockscape-client
    slug: "${CI_COMMIT_REF_SLUG}"
    sha: "${CI_COMMIT_SHA}"
spec:
  clusterIP: None
  ports:
  - port: 35653
    protocol: UDP
    name: blockscape-p2p
  - port: 8356
    protocol: TCP
    name: blockscape-jsonrpc
  selector:
    app: blockscape-client
    slug: "${CI_COMMIT_REF_SLUG}"
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: blockscape-client-${CI_COMMIT_REF_SLUG}
  namespace: blockscape
  labels:
    app: blockscape-client
    slug: "${CI_COMMIT_REF_SLUG}"
    sha: "${CI_COMMIT_SHA}"
spec:
  selector:
    matchLabels:
      app: blockscape-client
      slug: "${CI_COMMIT_REF_SLUG}"
  serviceName: "blockscape-client-${CI_COMMIT_REF_SLUG}"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: blockscape-client
        slug: "${CI_COMMIT_REF_SLUG}"
        sha: "${CI_COMMIT_SHA}"
    spec:
      affinity:
        # try not to schedule blockscape-client on the same node with another
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - blockscape-client
                - key: branch
                  operator: In
                  values:
                  - ${CI_COMMIT_REF_SLUG}
              topologyKey: "kubernetes.io/hostname"
      imagePullSecrets:
      - name: buyme-registry
      terminationGracePeriodSeconds: 10
      containers:
      - name: blockscape
        image: dcr.buyme360.com/plu-capstone/blockscape:${CI_COMMIT_REF_SLUG}
        imagePullPolicy: Always
        ports:
        - containerPort: 35653
          protocol: UDP
        - containerPort: 8356
          protocol: TCP
        volumeMounts:
        - name: blockscape-client-data
          mountPath: /data
        command:
        - /blockscape
        - -b
        - 0.0.0.0
        - -F
        - --seed-node
        - tcp:blockscape-client-${CI_COMMIT_REF_SLUG}-0.blockscape-client-${CI_COMMIT_REF_SLUG}:35653
        - --rpcbind
        - 0.0.0.0
      - name: bot
        image: dcr.buyme360.com/plu-capstone/blockscape/checkers-bot:${CI_COMMIT_REF_SLUG}
        imagePullPolicy: Always
      volumes:
      - name: blockscape-client-data
        emptyDir: {}
