kube/blockscape-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-${CI_COMMIT_REF_SLUG}-%%
  namespace: blockscape
  annotations:
    sha: ${CI_COMMIT_SHA}
spec:
  ports:
  - port: 35653
    name: blockscape-p2p
    protocol: UDP
  - port: 8356
    name: blockscape-rpc
  selector:
    app: blockscape-${CI_COMMIT_REF_SLUG}-client
    instance: "%%"
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: client-${CI_COMMIT_REF_SLUG}-%%
  namespace: blockscape
  annotations:
    sha: ${CI_COMMIT_SHA}
  labels:
    app: blockscape-${CI_COMMIT_REF_SLUG}-client
    instance: "%%"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blockscape-${CI_COMMIT_REF_SLUG}-client
      instance: "%%"
  template:
    metadata:
      name: client-${CI_COMMIT_REF_SLUG}-%%
      namespace: blockscape
      annotations:
        sha: ${CI_COMMIT_SHA}
      labels:
        app: blockscape-${CI_COMMIT_REF_SLUG}-client
        instance: "%%"
    spec:
      affinity:
        # Do not schedule blockscape-client on the same node with another
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - blockscape-${CI_COMMIT_REF_SLUG}-client
              topologyKey: "kubernetes.io/hostname"
      imagePullSecrets:
      - name: buyme-registry
      containers:
      - image: dcr.buyme360.com/plu-capstone/blockscape:${CI_COMMIT_REF_SLUG}
        imagePullPolicy: Always
        name: blockscape
        ports:
        - containerPort: 35653
        volumeMounts:
        - name: blockscape-client-data
          mountPath: /data
        command:
        - /blockscape
        - -h
        - client-${CI_COMMIT_REF_SLUG}-%%.blockscape
        - --seed-node
        - client-${CI_COMMIT_REF_SLUG}-0.blockscape:35653
      volumes:
      - name: blockscape-client-data
        hostPath:
          type: DirectoryOrCreate
          path: /var/lib/blockscape/client-${CI_COMMIT_REF_SLUG}-%%
