kube/explorer.yaml
apiVersion: v1
kind: Service
metadata:
  name: explorer-${CI_COMMIT_REF_SLUG}
  namespace: blockscape
  annotations:
    sha: ${CI_COMMIT_SHA}
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: blockscape-${CI_COMMIT_REF_SLUG}-explorer
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: explorer-${CI_COMMIT_REF_SLUG}
  namespace: blockscape
  annotations:
    sha: ${CI_COMMIT_SHA}
  labels:
    app: blockscape-${CI_COMMIT_REF_SLUG}-explorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blockscape-${CI_COMMIT_REF_SLUG}-explorer
  template:
    metadata:
      name: explorer-${CI_COMMIT_REF_SLUG}
      namespace: blockscape
      annotations:
        sha: ${CI_COMMIT_SHA}
      labels:
        app: blockscape-${CI_COMMIT_REF_SLUG}-explorer
    spec:
      imagePullSecrets:
      - name: buyme-registry
      containers:
      - image: dcr.buyme360.com/plu-capstone/blockscape-explorer:master
        imagePullPolicy: Always
        name: blockscape
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: explorer-config
          mountPath: /usr/src
          subPath: config.json
          readOnly: true
      volumes:
      - name: explorer-config
        configMap:
          name: explorer-${CI_COMMIT_REF_SLUG}
